feat: Major enhancements to DMS platform
Backend:
- Enhanced documents API with expanded CRUD operations
- Improved Mistral OCR service with better processing
- Extended workflow service with approval/rejection logic
- Added notification service enhancements
- New endpoints: access_requests, connectors, integrations, monitoring, SSO
- Added virus scanner service
- Updated dependencies and sharing models

Frontend:
- Enhanced DocumentDetailPage with improved UI/UX
- Refactored DocumentViewer component
- Extended WorkflowsPage with workflow management features
- Added RegisterPage and DocumentEditPage
- New RequestAccessModal and VersionHistoryWithDiff components
- Added access request service
- Updated routing in App.tsx

Infrastructure:
- Updated docker-compose configuration
- Added new requirements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     ports:
       - "7000:7000"
     environment:
-      - VITE_API_URL=http://185.215.166.90:7001/api/v1
+      - VITE_API_URL=http://localhost:7001/api/v1
     volumes:
       - ./frontend:/app
       - /app/node_modules
